--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,27 @@ jobs:
               length: 6
 
 
-          - uses: mr-smithers-excellent/docker-build-push@v6
-            name: Build API Image
+          - name: Setup AWS ECR Details
+            uses: aws-actions/configure-aws-credentials@v1
             with:
-              image: ${{ env.ECR_DOCKER_IMAGE }}
-              tags: latest, ${{ steps.short-sha.outputs.sha }}
-              directory: ./src/
-              dockerfile: ./src/Dockerfile
-              registry: ${{ secrets.ACCOUNT_NUMBER }}.dkr.ecr.${{ env.REGION }}.amazonaws.com
-            env:
-              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              aws-region: ${{secrets.AWS_REGION}}
 
+
+          - name: Login to Amazon ECR
+            id: login-pf-aws-ecr
+            uses: aws-actions/amazon-ecr-login@v1
+            
+
+          - name: Build and push the tagged docker image to Amazon ECR
+            env:
+              ECR_REGISTRY: ${{ steps.login-pf-aws-ecr.outputs.registry }}
+              ECR_REPOSITORY: ${{secrets.ECR_DOCKER_IMAGE}}
+              IMAGE_TAG: latest
+            run: |
+              docker build -t $ECR_REGISTRY/$ECR_DOCKER_IMAGE:$IMAGE_TAG .
+              docker push $ECR_REGISTRY/$ECR_DOCKER_IMAGE:$IMAGE_TAG
   
 
           
