--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
             env:
               ECR_REGISTRY: ${{ steps.login-pf-aws-ecr.outputs.registry }}
               ECR_REPOSITORY: ${{secrets.ECR_DOCKER_IMAGE}}
-              IMAGE_TAG: latest
+              IMAGE_TAG: ${{ steps.short-sha.outputs.sha }}
             run: |
               docker build -t $ECR_REGISTRY/$ECR_DOCKER_IMAGE:$IMAGE_TAG .
               docker push $ECR_REGISTRY/$ECR_DOCKER_IMAGE:$IMAGE_TAG
