--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,16 @@ jobs:
       
       name: semgrep/ci
       runs-on: ubuntu-latest
+        defaults:
+          run:
+            working-directory: ./src
 
       container:
         image: semgrep/semgrep
 
       steps:
         - uses: actions/checkout@v4
+
         - run: semgrep ci
           env:
             SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
