--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,22 +13,20 @@ env:
   ECR_DOCKER_IMAGE: fast-api-repo
 
 jobs:
-  semgrep-code-analysis:  
-    name: semgrep/ci
+  sonarqube:
+    name: SonarQube Integration
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./src
-
-    container:
-      image: semgrep/semgrep
-
+    
     steps:
-      - uses: actions/checkout@v4
-
-      - run: semgrep ci
-        env:
-          SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
+    - uses: actions/checkout@v4
+      with:
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+        fetch-depth: 0
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} //Sonar Token generated 
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
   
   build-image:
     runs-on: ubuntu-latest
