--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         login: ${{ secrets.SONAR_TOKEN }}
         projectName: fastapi_project
         projectKey: realexcel2021_fastapi_project
+        organization: realexcel2021
   
   build-image:
     runs-on: ubuntu-latest
