--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
   sonarqube:
     name: SonarQube Integration
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
     
     steps:
     - uses: actions/checkout@v4
@@ -27,9 +30,9 @@ jobs:
       with:
         host: ${{ secrets.SONAR_HOST_URL }}
         login: ${{ secrets.SONAR_TOKEN }}
-        projectName: fastapi_project
-        projectKey: realexcel2021_fastapi_project
-        organization: realexcel2021
+        # projectName: fastapi_project
+        # projectKey: realexcel2021_fastapi_project
+        # organization: realexcel2021
   
   build-image:
     runs-on: ubuntu-latest
