--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,22 @@ jobs:
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
-    - name: SonarQube Scan
-      uses: kitabisa/sonarqube-action@v1.2.0
+
+    - uses: actions/setup-java@v4
       with:
-        host: ${{ secrets.SONAR_HOST_URL }}
-        login: ${{ secrets.SONAR_TOKEN }}
-        projectBaseDir: "src/"
-  
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '21'
+
+    - uses: actions/setup-python@v5 
+      with:
+        python-version: 'pypy3.9' 
+
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   build-image:
     runs-on: ubuntu-latest
     defaults:
