--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,5 +105,6 @@ jobs:
           aws_region: ${{ env.AWS_REGION }}
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          timeout: 900
 
         
