--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,7 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_DOCKER_IMAGE:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_DOCKER_IMAGE:$IMAGE_TAG
+          echo "image=$REGISTRY/$REPOSITORY" >> $GITHUB_OUTPUT
 
       - name: Checkout AWS ECS Deploy GH Action
         uses: actions/checkout@v2
