--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -6,7 +6,7 @@ on:
         - main
         
 jobs:
-    deploy-terraform:
+    destroy-terraform:
         runs-on: ubuntu-latest
 
         defaults:
