--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=realexcel2021_fastapi_project
 sonar.organization=realexcel2021
-sonar.sources=src/
-sonar.language=py
+sonar.sources=terraform/
+#sonar.language=py
 sonar.python.version=3.12
